--- a/src/styles/_custom_quill.css
+++ b/src/styles/_custom_quill.css
@@ -1,4 +1,4 @@
-@import "react-quill/dist/quill.snow.css";
+/* @import "react-quill/dist/quill.snow.css";
 
 .ql-editor {
   height: 200px;
@@ -10,4 +10,4 @@
 
 .ql-container.ql-snow {
   @apply rounded-bl-[6px] rounded-br-[6px] border-antd-form;
-}
+} */
